【运动轨迹 删掉无用代码】

--- a/css运动轨迹特效.html
+++ b/css运动轨迹特效.html
@@ -481,39 +481,19 @@
                         let specialClass = `fireworksCtn-${endUid}`;
                         $(`.subItem[data-uid=${endUid}]`).find('.emptyCtn').append(`<div class="fireworksCtn innerCtn ${specialClass}" id="${specialClass}"></div`);
                         
-                            console.log('specialClass===' + specialClass);
-                            console.log('i==' + i);
-
                             let player = new window.SVGA.Player('.fireworksCtn-' + endUid);
                             let parser = new window.SVGA.Parser('.fireworksCtn-' + endUid);
 
                             player.clearsAfterStop = true;
                             player.fillMode = 'Forward';
                             player.loops = 1;
-                            // parser.load('https://asset.tuwan.com/cphead/exploding_point_1228_new.svga', (videoItem) => {
                             parser.load('./static/gif/exploding_point_1226.svga', (videoItem) => {
                                 player.setVideoItem(videoItem);
                                 player.startAnimation();
                             });
 
-
-                        // player = new SVGA.Player('.fireworksCtn-' + endUid);
-                        // parser = new SVGA.Parser('.fireworksCtn-' + endUid);
-
-                        // parser.load('./static/gif/exploding_point_1226.svga', function(videoItem) {
-                        //     player.setVideoItem(videoItem);
-                        //     parser.startAnimation();
-                        // });
-
-                        // let player2 = new SVGA.Player('.fireworksCtn-3');
-                        // let parser2 = new SVGA.Parser('.fireworksCtn-3');
-                        // parser2.load('./static/gif/exploding_point_1226.svga', function(videoItem) {
-                        //     player2.setVideoItem(videoItem);
-                        //     player2.startAnimation();
-                        // });
-
                         setTimeout(() => {
-                            // $('.fireworksCtn').remove();
+                            $('.fireworksCtn').remove();
                         }, fireworksTime);
                     }, animationTime);
                 });
