【运动轨迹样式优化】

--- a/css运动轨迹特效.html
+++ b/css运动轨迹特效.html
@@ -4,7 +4,7 @@
             position: relative;
             border: 1px solid black;
             border-radius: 4px;
-            width: 660px;
+            width: 730;
             margin:  0 auto;
             padding: 40px;
         }
@@ -32,7 +32,7 @@
             margin-bottom: 20px;
         }
         .rightCtn {
-            width: 520px;
+            width: 580px;
             margin-left: 10px;
         }
         .leftCtn {
@@ -100,45 +100,45 @@
     }
     
     .subItem[data-aposition="2"] .cpContainer{
-        left: 89px;
+        left: 96px;
         top: 180px;
     }
 
     .subItem[data-aposition="3"] .cpContainer{
-        left: 220px;
+        left: 237px;
         top: 120px;
     }
     .subItem[data-aposition="4"] .cpContainer{
-        left: 350px;
+        left: 375px;
         top: 120px;
     }
     .subItem[data-aposition="5"] .cpContainer{
-        left: 480px;
+        left: 516px;
         top: 120px;
     }
     .subItem[data-aposition="6"] .cpContainer{
-        left: 610px;
+        left: 655px;
         top: 120px;
     }
 
     .subItem[data-aposition="7"] .cpContainer{
-        left: 220px;
+        left: 237px;
         top: 240px;
     }
     .subItem[data-aposition="8"] .cpContainer{
-        left: 350px;
+        left: 374px;
         top: 240px;
     }
     .subItem[data-aposition="9"] .cpContainer{
-        left: 480px;
+        left: 516px;
         top: 240px;
     }
     .subItem[data-aposition="10"] .cpContainer{
-        left: 610px;
+        left: 655px;
         top: 240px;
     }
     .testCtn {
-        width: 400px;
+        width: 600px;
         margin: 40px auto;
     }
 
@@ -148,7 +148,7 @@
     }
     .emptyCtn .fireworksCtn {
         position: absolute;
-        left: 50px;
+        left: 60px;
         top: 50px;
     }
 
@@ -161,6 +161,7 @@
                 <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                     <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                 </div>
+                <span class="left">1</span>
             </div>
             <div class="left rightCtn">
                 <div class="subItem" data-uid="2" data-aposition="3">
@@ -169,6 +170,7 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">2</span>
                 </div>
                 <div class="subItem" data-uid="3" data-aposition="4">
                     <div class="emptyCtn"></div>
@@ -176,6 +178,7 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">3</span>
                 </div>
                 <div class="subItem" data-uid="4" data-aposition="5">
                     <div class="emptyCtn"></div>
@@ -183,6 +186,7 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">4</span>
                 </div>
                 <div class="subItem" data-uid="5" data-aposition="6">
                     <div class="emptyCtn"></div>
@@ -190,6 +194,7 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">5</span>
                 </div>
                 <div class="subItem" data-uid="6" data-aposition="7">
                     <div class="emptyCtn"></div>
@@ -197,6 +202,7 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">6</span>
                 </div>
 
                 <div class="subItem" data-uid="7" data-aposition="8">
@@ -205,6 +211,7 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">7</span>
                 </div>
                 <div class="subItem" data-uid="8" data-aposition="9">
                     <div class="emptyCtn"></div>
@@ -212,6 +219,7 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">8</span>
                 </div>
                 <div class="subItem" data-uid="9" data-aposition="10">
                     <div class="emptyCtn"></div>
@@ -219,14 +227,18 @@
                     <div class="cpContainer" style="offset-path: path(&quot;M0,0 q0 0 0,0&quot;)">
                         <img class="cpImg" src="https://asset.tuwan.com/cphead/room_cp_heart_icon_1226.png">
                     </div>
+                    <span class="left">9</span>
                 </div>
             </div>
         </div>
     </body>
     <div class="testCtn">
-        <input type="text" id="value1"> 
-        <input type="text" id="value2">
-        <button id="btn">点我</button>
+        出发位置：<input type="text" id="value1" placeholder="多个用逗号隔开"> 
+        结束位置：<input type="text" id="value2" placeholder="多个用逗号隔开">
+        <button id="btn">点我触发</button>
+        <p>
+            支持一对一； 多对一； 一对多 的情况
+        </p>
     </div>
 
     <script src="./static/js/jquery.js"></script>
@@ -486,7 +498,7 @@
 
                             player.clearsAfterStop = true;
                             player.fillMode = 'Forward';
-                            player.loops = 1;
+                            // player.loops = 1;
                             parser.load('./static/gif/exploding_point_1226.svga', (videoItem) => {
                                 player.setVideoItem(videoItem);
                                 player.startAnimation();
